--- a/src/pages/producto/[handle].astro
+++ b/src/pages/producto/[handle].astro
@@ -49,6 +49,10 @@ export async function getStaticPaths() {
                     amount
                     currencyCode
                   }
+                  compareAtPrice {
+                    amount
+                    currencyCode
+                  }
                   selectedOptions {
                     name
                     value
