--- a/src/pages/cuidado-joyas.astro
+++ b/src/pages/cuidado-joyas.astro
@@ -1,5 +1,6 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import Breadcrumbs from "../components/Breadcrumbs.astro";
 
 const seo = {
   title: "Guía Definitiva: Cuidado de Joyas y Oro 14k | DTalles Jewelry",
@@ -56,6 +57,11 @@ const schema = {
 
     <div class="bg-[#050505] min-h-screen text-[#FAFAF5]">
         
+        {/* BREADCRUMBS */}
+        <div class="max-w-4xl mx-auto px-6 pt-28">
+            <Breadcrumbs items={[{ label: "Inicio", href: "/" }, { label: "Cuidado de Joyas" }]} />
+        </div>
+
         {/* HERO SECTION */}
         <section class="relative pt-32 pb-20 px-6 overflow-hidden">
             <div class="absolute top-0 left-0 w-full h-full bg-[radial-gradient(circle_at_top_right,_var(--tw-gradient-stops))] from-[#d4af37]/10 via-[#050505] to-[#050505] -z-10"></div>
