--- a/src/pages/favoritos.astro
+++ b/src/pages/favoritos.astro
@@ -1,5 +1,6 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import Breadcrumbs from "../components/Breadcrumbs.astro";
 import WishlistGrid from "../components/react/favorites/WishlistGrid";
 import ShareList from "../components/react/favorites/ShareList";
 ---
@@ -11,6 +12,7 @@ import ShareList from "../components/react/favorites/ShareList";
     <div
         class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 pt-32 pb-12 lg:pt-40 lg:pb-24"
     >
+        <Breadcrumbs items={[{ label: "Inicio", href: "/" }, { label: "Favoritos" }]} />
         {/* Header */}
         <div
             class="flex flex-col md:flex-row md:items-end md:justify-between gap-6 mb-16 border-b border-white/5 pb-8"
