--- a/src/pages/tienda.astro
+++ b/src/pages/tienda.astro
@@ -1,5 +1,6 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import Breadcrumbs from "../components/Breadcrumbs.astro";
 import StoreGrid from "../components/react/StoreGrid";
 import { client } from "../lib/shopify";
 import { ALL_PRODUCTS_QUERY } from "../lib/queries/allProducts";
@@ -24,6 +25,11 @@ try {
     description="Explora nuestra colección de joyas exquisitas."
 >
     <div class="bg-[#050505] min-h-screen">
+        {/* BREADCRUMBS */}
+        <div class="max-w-7xl mx-auto px-6 pt-28">
+            <Breadcrumbs items={[{ label: "Inicio", href: "/" }, { label: "Tienda" }]} />
+        </div>
+
         <!-- Hero Section -->
         <div
             class="relative w-full h-[40vh] min-h-[400px] flex flex-col items-center justify-center overflow-hidden"
