--- a/src/pages/guia-regalos.astro
+++ b/src/pages/guia-regalos.astro
@@ -26,7 +26,7 @@ const categories = [
         title: "Religiosos",
         img: "/images/gifts-religious.webp",
         desc: "Símbolos de fe y protección",
-        href: "/coleccion/religiosa",
+        href: "/coleccion/religioso",
         color: "from-yellow-900/50"
     },
     {
