--- a/src/pages/producto/[handle].astro
+++ b/src/pages/producto/[handle].astro
@@ -4,6 +4,7 @@ import Layout from "../../layouts/Layout.astro";
 import { client as shopifyClient } from "../../lib/shopify";
 import { gql } from "graphql-request";
 import ProductPage from "../../components/react/product/ProductPage";
+import ProductWhatsAppSticky from "../../components/react/product/ProductWhatsAppSticky";
 
 export async function getStaticPaths() {
   const query = gql`
@@ -342,16 +343,23 @@ const breadcrumbItems = [
 ];
 ---
 
-<Layout title={seoTitle} description={seoDescription} image={mainImage}>
-  {/* Inject JSON-LD */}
+<Layout title={seoTitle} description={seoDescription} image={mainImage} hideFloatingSupport={true}>
+  <!-- Inject JSON-LD -->
   <script type="application/ld+json" set:html={JSON.stringify(schema)} />
 
   <div
-    class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 pt-32 pb-32 lg:pt-40 lg:pb-16"
+    class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 pt-[280px] pb-32 lg:pt-[320px] lg:pb-16"
   >
     <Breadcrumbs items={breadcrumbItems} />
 
-    {/* React Orchestrator */}
+    <!-- Botón WhatsApp Premium Móvil -->
+    <ProductWhatsAppSticky 
+      client:load 
+      productTitle={product.title} 
+      productUrl={`https://dtallesjewelry.com/producto/${product.handle}`} 
+    />
+
+    <!-- React Orchestrator -->
     <ProductPage client:load product={product} />
 
     {
