--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,6 +8,7 @@
   --color-bg-dark: #050505;
   --color-bg-light: #f8f7f6;
   --color-text-light: #FAFAF5;
+  --color-surface: #121212;
   --color-surface-dark: #121212;
 
   --animate-shimmer: shimmer 2s linear infinite;
