fix(auth): corregir bug 404 de inicio de sesion de shopify

--- a/src/components/BottomMenu.astro
+++ b/src/components/BottomMenu.astro
@@ -123,7 +123,8 @@ import { isCartOpen } from "../store/cart";
 
         {/* Account */}
         <a
-            href="/account"
+            href="https://dtalles-jewelry.myshopify.com/account"
+            target="_blank"
             class="flex flex-col items-center justify-center w-12 text-gray-400 hover:text-[#d4af37] transition-colors gap-1"
         >
             <span class="material-symbols-outlined text-[24px]">person</span>
