--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,6 +19,7 @@ interface Props {
 }
 
 const { title, description, image, hideFloatingSupport = false } = Astro.props;
+const affirmApiKey = import.meta.env.PUBLIC_AFFIRM_API_KEY || "YOUR_AFFIRM_PUBLIC_API_KEY";
 ---
 
 <!doctype html>
@@ -129,6 +130,15 @@ const { title, description, image, hideFloatingSupport = false } = Astro.props;
         <Footer client:visible />
         <MobileAppNav client:load />
         {!hideFloatingSupport && <FloatingSupport client:load />}
+
+        {/* Script nativo de Affirm. Funciona globalmente para todos los componentes de React que inyecten class="affirm-as-low-as" */}
+        <script is:inline define:vars={{ affirmApiKey }}>
+            _affirm_config = {
+                public_api_key: affirmApiKey,
+                script: "https://script.affirm.com/js/v2/affirm.js" 
+            };
+            (function(m,g,n,d,a,e,h,c){var b=m[n]||{},k=document.createElement(e),p=document.getElementsByTagName(e)[0],l=function(a,b,c){return function(){a[b]._.push([c,arguments])}};b[d]=l(b,d,"set");var f=b[d];b[a]={};b[a]._=[];f._=[];b._=[];b[a][h]=l(b,a,h);b[c]=function(){b._.push([h,arguments])};a=0;for(c="set add save post open empty reset on off trigger ready setProduct".split(" ");a<c.length;a++)f[c[a]]=l(b,d,c[a]);a=0;for(c=["get","token","url","items"];a<c.length;a++)f[c[a]]=function(){};k.async=!0;k.src=g[d];p.parentNode.insertBefore(k,p);delete g[d];b(g);m[n]=b})(window,_affirm_config,"affirm","checkout","ui","script","ready","jsReady");
+        </script>
 
         <script>
             document.addEventListener("astro:page-load", () => {
